--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,17 @@
     </profile>
   </profiles>
 
+  <distributionManagement>
+    <repository>
+      <id>capra-releases</id>
+      <url>https://mvnrepo.capraconsulting.no/content/repositories/capra-releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>capra-snapshots</id>
+      <url>https://mvnrepo.capraconsulting.no/content/repositories/capra-snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
   <properties>
     <major-version>1</major-version>
     <revision>${major-version}.local-SNAPSHOT</revision>
@@ -39,9 +50,11 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
     <kotlin.version>1.3.72</kotlin.version>
+    <ktlint.version>0.37.2</ktlint.version>
     <serialization.version>0.20.0</serialization.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <maven-antrun-plugin.version>3.0.0</maven-antrun-plugin.version>
 
     <aws-sdk.version>2.13.20</aws-sdk.version>
   </properties>
@@ -138,6 +151,51 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-maven-serialization</artifactId>
             <version>${kotlin.version}</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>${maven-antrun-plugin.version}</version>
+        <executions>
+          <execution>
+            <id>ktlint</id>
+            <phase>verify</phase>
+            <configuration>
+              <target name="ktlint">
+                <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
+                      classname="com.pinterest.ktlint.Main" classpathref="maven.plugin.classpath">
+                  <arg value="src/**/*.kt"/>
+                </java>
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>ktlint-format</id>
+            <configuration>
+              <target name="ktlint">
+                <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
+                      classname="com.pinterest.ktlint.Main" classpathref="maven.plugin.classpath">
+                  <arg value="-F"/>
+                  <arg value="src/**/*.kt"/>
+                </java>
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+
+        <dependencies>
+          <dependency>
+            <groupId>com.pinterest</groupId>
+            <artifactId>ktlint</artifactId>
+            <version>${ktlint.version}</version>
           </dependency>
         </dependencies>
       </plugin>
