--- a/pom.xml
+++ b/pom.xml
@@ -45,17 +45,15 @@
   <properties>
     <major-version>1</major-version>
     <revision>${major-version}.local-SNAPSHOT</revision>
-
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>{java.version}</maven.compiler.target>
+
     <java.version>1.8</java.version>
     <kotlin.version>1.3.72</kotlin.version>
-    <ktlint.version>0.37.2</ktlint.version>
     <serialization.version>0.20.0</serialization.version>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven-antrun-plugin.version>3.0.0</maven-antrun-plugin.version>
-
+    <ktlint-maven-plugin.version>1.5.2</ktlint-maven-plugin.version>
     <aws-sdk.version>2.13.20</aws-sdk.version>
   </properties>
 
@@ -141,7 +139,7 @@
           <args>
             <arg>-Xjsr305=strict</arg>
           </args>
-          <jvmTarget>1.8</jvmTarget>
+          <jvmTarget>${java.version}</jvmTarget>
           <compilerPlugins>
             <plugin>kotlinx-serialization</plugin>
           </compilerPlugins>
@@ -155,49 +153,18 @@
         </dependencies>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <version>${maven-antrun-plugin.version}</version>
+        <groupId>com.github.gantsign.maven</groupId>
+        <artifactId>ktlint-maven-plugin</artifactId>
+        <version>${ktlint-maven-plugin.version}</version>
         <executions>
           <execution>
-            <id>ktlint</id>
-            <phase>verify</phase>
-            <configuration>
-              <target name="ktlint">
-                <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
-                      classname="com.pinterest.ktlint.Main" classpathref="maven.plugin.classpath">
-                  <arg value="src/**/*.kt"/>
-                </java>
-              </target>
-            </configuration>
+            <id>format-and-check</id>
             <goals>
-              <goal>run</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>ktlint-format</id>
-            <configuration>
-              <target name="ktlint">
-                <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
-                      classname="com.pinterest.ktlint.Main" classpathref="maven.plugin.classpath">
-                  <arg value="-F"/>
-                  <arg value="src/**/*.kt"/>
-                </java>
-              </target>
-            </configuration>
-            <goals>
-              <goal>run</goal>
+              <goal>format</goal>
+              <goal>check</goal>
             </goals>
           </execution>
         </executions>
-
-        <dependencies>
-          <dependency>
-            <groupId>com.pinterest</groupId>
-            <artifactId>ktlint</artifactId>
-            <version>${ktlint.version}</version>
-          </dependency>
-        </dependencies>
       </plugin>
     </plugins>
   </build>
