--- a/pom.xml
+++ b/pom.xml
@@ -158,9 +158,8 @@
         <version>${ktlint-maven-plugin.version}</version>
         <executions>
           <execution>
-            <id>format-and-check</id>
+            <id>check</id>
             <goals>
-              <goal>format</goal>
               <goal>check</goal>
             </goals>
           </execution>
