--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,8 @@
     <maven.compiler.target>{java.version}</maven.compiler.target>
 
     <java.version>1.8</java.version>
-    <kotlin.version>1.3.72</kotlin.version>
-    <serialization.version>0.20.0</serialization.version>
+    <kotlin.version>1.4.10</kotlin.version>
+    <kotlinx.serialization.runtime.version>1.0-M1-1.4.0-rc</kotlinx.serialization.runtime.version>
     <ktlint-maven-plugin.version>1.5.2</ktlint-maven-plugin.version>
     <aws-sdk.version>2.13.20</aws-sdk.version>
   </properties>
@@ -61,7 +61,7 @@
     <dependency>
       <groupId>org.jetbrains.kotlinx</groupId>
       <artifactId>kotlinx-serialization-runtime</artifactId>
-      <version>${serialization.version}</version>
+      <version>${kotlinx.serialization.runtime.version}</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-secretsmanager -->
