--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
     <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
     <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
     <plugins>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -103,6 +104,7 @@
           </systemPropertyVariables>
         </configuration>
       </plugin>
+
       <plugin>
         <artifactId>kotlin-maven-plugin</artifactId>
         <version>${kotlin.version}</version>
@@ -115,8 +117,7 @@
             </goals>
             <configuration>
               <sourceDirs>
-                <source>src/main/java</source>
-                <source>src/main/kotlin</source>
+                <source>${project.basedir}/src/main/kotlin</source>
               </sourceDirs>
             </configuration>
           </execution>
@@ -152,6 +153,7 @@
           </dependency>
         </dependencies>
       </plugin>
+
       <plugin>
         <groupId>com.github.gantsign.maven</groupId>
         <artifactId>ktlint-maven-plugin</artifactId>
@@ -165,6 +167,7 @@
           </execution>
         </executions>
       </plugin>
+
     </plugins>
   </build>
 
