--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
     <ktlint-maven-plugin.version>1.5.2</ktlint-maven-plugin.version>
     <aws-sdk.version>2.13.20</aws-sdk.version>
     <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+    <junit.version>5.7.0</junit.version>
   </properties>
 
   <dependencies>
@@ -88,6 +89,12 @@
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-test</artifactId>
       <version>${kotlin.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
