--- a/pom.xml
+++ b/pom.xml
@@ -32,20 +32,23 @@
     <major-version>1</major-version>
     <revision>${major-version}.local-SNAPSHOT</revision>
 
+    <java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>{java.version}</maven.compiler.target>
 
-    <java.version>1.8</java.version>
-    <kotlin.version>1.5.31</kotlin.version>
-    <kotlinx.serialization.version>1.2.2</kotlinx.serialization.version>
-    <ktlint-maven-plugin.version>1.11.1</ktlint-maven-plugin.version>
-    <aws-sdk.version>2.17.40</aws-sdk.version>
-    <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
-    <junit.version>5.8.1</junit.version>
+    <kotlin.version>1.6.0</kotlin.version>
+    <kotlinx.serialization.version>1.3.1</kotlinx.serialization.version>
+    <aws-sdk.version>2.17.92</aws-sdk.version>
     <slf4j.version>1.7.32</slf4j.version>
+
+    <junit.version>5.8.2</junit.version>
     <mockk.version>1.12.1</mockk.version>
+
+    <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+    <ktlint-maven-plugin.version>1.11.1</ktlint-maven-plugin.version>
+    <flatten-maven-plugin.version>1.2.7</flatten-maven-plugin.version>
   </properties>
 
   <dependencies>
@@ -56,14 +59,14 @@
       <type>pom</type>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-secretsmanager -->
+    <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/secretsmanager -->
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>secretsmanager</artifactId>
       <version>${aws-sdk.version}</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-ssm -->
+    <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/ssm -->
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>ssm</artifactId>
@@ -172,7 +175,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
-        <version>1.2.7</version>
+        <version>${flatten-maven-plugin.version}</version>
         <configuration>
           <updatePomFile>true</updatePomFile>
           <flattenMode>resolveCiFriendliesOnly</flattenMode>
