fix: use alpine-based ci image

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-20.04
     container:
-      image: "public.ecr.aws/z8l5l4v4/buildtools/tool/maven:3-jdk-11-debian"
+      image: "public.ecr.aws/z8l5l4v4/buildtools/tool/maven:3-jdk-11-alpine"
       options: "--user 1001:121" # uid and gid of default GitHub user to avoid file permission issues. See https://github.com/actions/runner/issues/691 for more details.
     permissions:
       contents: write
